--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migration:generate": "drizzle-kit generate:pg",
-    "migration:push": "drizzle-kit push:pg"
+    "migration:generate": "drizzle-kit generate",
+    "migration:push": "drizzle-kit push"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.36.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
-    "drizzle-kit": "^0.20.18",
     "drizzle-orm": "^0.30.10",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-axiom": "^1.1.1",
     "next-themes": "^0.3.0",
+    "nextjs-better-unstable-cache": "^1.1.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
@@ -34,11 +35,13 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.35.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-grid-layout": "^1.3.5",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.21.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
