--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-axiom": "^1.1.1",
     "next-themes": "^0.3.0",
     "nextjs-better-unstable-cache": "^1.1.0",
+    "nuqs": "^1.17.2",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
