--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-grid-layout": "^1.4.4",
     "react-icons": "^5.0.1",
